fix: overflow header

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ a {
 .header {
     padding: 1.6rem;
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .hero-nav {
@@ -233,7 +233,7 @@ footer a.btn:hover::after {
     }
 
     .hero-image img {
-        overflow-x: hidden;
+        overflow: hidden;
         width: 100%;
         max-height: 100%;
         object-fit: cover;
